--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
 		<dependency>
 			<groupId>org.scalatest</groupId>
-			<artifactId>scalatest_2.10</artifactId>
+			<artifactId>scalatest_2.11</artifactId>
 			<version>3.0.0</version>
 		</dependency>
 
@@ -64,7 +64,7 @@
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_2.10</artifactId>
+			<artifactId>spark-core_2.11</artifactId>
 			<version>${spark.version}</version>
 			<exclusions>
 				<exclusion>
@@ -80,19 +80,19 @@
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-mllib_2.10</artifactId>
+			<artifactId>spark-mllib_2.11</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-sql_2.10</artifactId>
+			<artifactId>spark-sql_2.11</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-hive_2.10</artifactId>
+			<artifactId>spark-hive_2.11</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
 
@@ -105,14 +105,8 @@
 
 		<dependency>
 			<groupId>com.databricks</groupId>
-			<artifactId>spark-avro_2.10</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.databricks</groupId>
-			<artifactId>spark-csv_2.10</artifactId>
-			<version>1.3.0</version>
+			<artifactId>spark-csv_2.11</artifactId>
+			<version>1.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -148,7 +142,7 @@
 	</dependencies>
 
 	<build>
-		<!-- <sourceDirectory>src</sourceDirectory> -->
+		<!-- <pluginManagement> -->
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -215,7 +209,6 @@
 					</javacArgs>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -242,7 +235,6 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.4.1</version>
 				<configuration>
-					<!-- get all project dependencies -->
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
@@ -250,7 +242,6 @@
 				<executions>
 					<execution>
 						<id>make-assembly</id>
-						<!-- bind to the packaging phase -->
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
@@ -273,6 +264,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<!-- </pluginManagement> -->
 	</build>
 	<repositories>
 		<repository>
@@ -292,7 +284,6 @@
 		<repository>
 			<id>hbase-spark</id>
 			<name>hbase-spark</name>
-			<!-- <url>https://repository.apache.org/content/repositories/snapshots/org/apache/hbase/hbase-spark/2.0.0-SNAPSHOT/</url> -->
 			<url>https://repository.apache.org/content/repositories/snapshots/</url>
 			<releases>
 				<enabled>true</enabled>
